--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "nikic/fast-route": "^1.3",
         "php-di/php-di": "^7.0",
-        "league/plates": "^3.5"
+        "league/plates": "^3.5",
+        "aura/sqlquery": "^3.0"
     },
 
     "autoload": {
